--- a/public/html/team_search.html
+++ b/public/html/team_search.html
@@ -144,6 +144,7 @@
             <tr>
               <th scope="col">Match #</th>
               <th scope="col">Start</th>
+              <th scope="col">Alliance</th>
               <th scope="col">Plates</th>
               <th scope="col">Climb</th>
             </tr>
@@ -162,6 +163,7 @@
           <thead>
             <tr>
               <th scope="col">Match #</th>
+              <th scope="col">Scouter</th>
               <th scope="col">Comment</th>
             </tr>
           </thead>
