add overall cubes to data

--- a/public/html/team_search.html
+++ b/public/html/team_search.html
@@ -98,6 +98,24 @@
       <br>
       <div class="table-responsive">
         <h4>
+          Overall Cubes Table
+        </h4>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Team</th>
+              <th scope="col">Auto</th>
+              <th scope="col">Teleop</th>
+            </tr>
+          </thead>
+          <tbody id="overall_table">
+
+          </tbody>
+        </table>
+      </div>
+      <br>
+      <div class="table-responsive">
+        <h4>
           Autonomous Table
         </h4>
         <table class="table">
